name:           time
version:        1.5.0.1
stability:      stable
license:        BSD3
license-file:   LICENSE
author:         Ashley Yakeley
maintainer:     <ashley@semantic.org>
homepage:       https://github.com/haskell/time
bug-reports:    https://github.com/haskell/time/issues
synopsis:       A time library
description:    A time library
category:       System
build-type:     Simple
cabal-version:  >=1.14
x-follows-version-policy:

extra-source-files:
    lib/include/HsConfigure.h
    lib/include/HsTime.h
    lib/include/HsTimeConfig.h

source-repository head
  type:     git
  location: https://github.com/haskell/time

flag haste-cabal
    default: False
    description: Are we building for Haste?

library
    hs-source-dirs: lib
    build-depends:
        base >= 4.4 && < 5,
        deepseq >= 1.1
    ghc-options: -Wall
    default-language: Haskell2010
    if impl(ghc)
        default-extensions:
            Rank2Types
            DeriveDataTypeable
            StandaloneDeriving
        cpp-options: -DLANGUAGE_Rank2Types -DLANGUAGE_DeriveDataTypeable -DLANGUAGE_StandaloneDeriving
    else
        if impl(hugs)
            default-extensions: Rank2Types
            cpp-options: -DLANGUAGE_Rank2Types
    if flag(haste-cabal)
        build-depends: haste-lib
    exposed-modules:
        Data.Time.Calendar,
        Data.Time.Calendar.MonthDay,
        Data.Time.Calendar.OrdinalDate,
        Data.Time.Calendar.WeekDate,
        Data.Time.Calendar.Julian,
        Data.Time.Calendar.Easter,
        Data.Time.Clock,
        Data.Time.Clock.POSIX,
        Data.Time.Clock.TAI,
        Data.Time.LocalTime,
        Data.Time.Format,
        Data.Time
    default-extensions:    CPP
    c-sources: lib/cbits/HsTime.c
    other-modules:
        Data.Time.Calendar.Private,
        Data.Time.Calendar.Days,
        Data.Time.Calendar.Gregorian,
        Data.Time.Calendar.JulianYearDay,
        Data.Time.Clock.Scale,
        Data.Time.Clock.UTC,
        Data.Time.Clock.CTimeval,
        Data.Time.Clock.UTCDiff,
        Data.Time.LocalTime.TimeZone,
        Data.Time.LocalTime.TimeOfDay,
        Data.Time.LocalTime.LocalTime,
        Data.Time.Format.Parse
        Data.Time.Format.Locale
    include-dirs: lib/include
    if os(windows)
        install-includes:
            HsTime.h
    else
        install-includes:
            HsTime.h
            HsTimeConfig.h
