name:       array
version:    0.4.0.1
license:    BSD3
license-file:    LICENSE
maintainer:    libraries@haskell.org
bug-reports: http://hackage.haskell.org/trac/ghc/newticket?component=libraries%20%28other%29
synopsis:   Mutable and immutable arrays
category:   Data Structures
description:
    This package defines the classes @IArray@ of immutable arrays and
    @MArray@ of arrays mutable within appropriate monads, as well as
    some instances of these classes.
cabal-version: >=1.6
build-type: Simple
extra-source-files: include/Typeable.h

source-repository head
    type:     git
    location: http://darcs.haskell.org/packages/array.git/

library
  build-depends: base >= 4.2 && < 5
  exposed-modules:
      Data.Array
  extensions: CPP
  if !impl(nhc98)
    exposed-modules:
      Data.Array.Base
      Data.Array.IArray
      Data.Array.IO
      Data.Array.IO.Safe
      Data.Array.IO.Internals
      Data.Array.MArray
      Data.Array.MArray.Safe
      Data.Array.ST
      Data.Array.ST.Safe
      Data.Array.Storable
      Data.Array.Storable.Safe
      Data.Array.Storable.Internals
      Data.Array.Unboxed
      Data.Array.Unsafe
    extensions:
      MultiParamTypeClasses,
      FlexibleContexts,
      FlexibleInstances,
      TypeSynonymInstances
  if impl(ghc)
    extensions:
      DeriveDataTypeable,
      StandaloneDeriving,
      Rank2Types,
      MagicHash,
      UnboxedTuples,
      ForeignFunctionInterface,
      UnliftedFFITypes
  include-dirs: include
